# drone_energy_rl

./: .gitignore  LICENSE  README.md
drone_energy_gazebo/: CMakeLists.txt  package.xml
drone_energy_gazebo/launch/: rl_start.launch  start.launch
drone_energy_gazebo/scripts/: benchmark.py  drone_gym_wrapper.py  drone_rl_env.py  energy_log_1753804520.csv  energy_logger.py  force_wind.py  train_dqn.py  train_sac.py
drone_energy_gazebo/scripts/dqn_logs/: evaluations.npz
drone_energy_gazebo/scripts/dqn_logs/DQN_1/: events.out.tfevents.1754086074.berfin-Victus-by-HP-Laptop-16-d1xxx.251952.0
drone_energy_gazebo/scripts/dqn_logs/DQN_2/: events.out.tfevents.1754086483.berfin-Victus-by-HP-Laptop-16-d1xxx.256793.0
drone_energy_gazebo/scripts/dqn_logs/DQN_3/: events.out.tfevents.1754087146.berfin-Victus-by-HP-Laptop-16-d1xxx.266200.0
drone_energy_gazebo/scripts/dqn_logs/DQN_4/: events.out.tfevents.1754088382.berfin-Victus-by-HP-Laptop-16-d1xxx.281666.0
drone_energy_gazebo/scripts/dqn_logs/DQN_5/: events.out.tfevents.1754089432.berfin-Victus-by-HP-Laptop-16-d1xxx.296807.0
drone_energy_gazebo/scripts/dqn_logs/DQN_6/: events.out.tfevents.1754089792.berfin-Victus-by-HP-Laptop-16-d1xxx.304226.0
drone_energy_gazebo/scripts/dqn_logs/DQN_7/: events.out.tfevents.1754090598.berfin-Victus-by-HP-Laptop-16-d1xxx.316108.0
drone_energy_gazebo/scripts/dqn_logs/DQN_8/: events.out.tfevents.1754091770.berfin-Victus-by-HP-Laptop-16-d1xxx.332177.0
drone_energy_gazebo/worlds/: reinforcement_world.world  rl2.world
(+3 files in other folders)
