<?xml version="1.0"?>
<package format="2">
  <name>drone_energy_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation for drone energy project</description>

  <maintainer email="berfins.4615@gmail.com">Berfin Sünnetcioğlu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
